objects/APTS_Order_Submission__e.object
<CustomObject>
    <fields>
        <fullName>ApplicationID__c</fullName>
        <label>ApplicationID</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyID__c</fullName>
        <label>CompanyID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSONRecordID__c</fullName>
        <label>JSONRecordID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNo__c</fullName>
        <label>OrderNo</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>APTS Order Submission</label>
    <pluralLabel>APTS Order Submissions</pluralLabel>
</CustomObject>